--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body{
   
   width: 100%;
   height: 100%;
-  border: 2px red solid;
+  /* border: 2px red solid; */
   overflow-y: scroll;
 }
 
@@ -32,7 +32,7 @@ body{
 .header {
   width: 100%;
   height: calc((100dvh * 30)/100);
-  border: 2px black solid;
+  /* border: 2px black solid; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
