--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,7 @@ margin-bottom: 20px;
 
 .content-box h2{
 margin-top: 20px;
+display: none;
 }
 
 
@@ -166,6 +167,8 @@ margin-top: 20px;
   margin: 20px 0px 20px 0px;
 }
 
+
+
 .content-box > button{
   width: 30%;
   height: calc(2dvw + 2dvh);
@@ -174,6 +177,7 @@ margin-top: 20px;
   background-color: greenyellow;
   border: none;
   color: black;
+  display: none;
 }
 
 @media (max-width: 530px) {
